tests/fixtures/LatestTests/BinaryOperationLiteralTests/errors/decimal_logical_or.fg
/; EXPECT_ERROR: InvalidBinaryOperationWithTypes
print(1.0 || 2.0)

